--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@skavinvarnan/cryptlib": "^1.0.3",
     "body-parser": "^1.18.3",
+    "egoroof-blowfish": "^2.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
