--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mongoose": "^5.3.12",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "nodemon": "^1.18.6"
   }
 }
