--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bl": "^2.1.2",
     "body-parser": "^1.18.3",
+    "clear": "^0.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
