--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.3.12",
     "multer": "^1.4.1",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "simple-git": "^1.107.0"
   }
