--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.360.0",
     "bl": "^2.1.2",
     "body-parser": "^1.18.3",
     "clear": "^0.1.0",
