--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
     "clear": "^0.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "fs": "0.0.1-security",
-    "mailgun-js": "^0.22.0",
     "mongoose": "^5.3.12",
-    "multer": "^1.4.1",
-    "nodemailer": "^4.7.0",
-    "nodemon": "^1.18.6",
+    "node-bitlyapi": "^0.4.0",
     "simple-git": "^1.107.0"
   }
 }
