--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clear": "^0.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "generate-password": "^1.4.1",
     "mongoose": "^5.3.12",
     "request": "^2.88.0",
     "simple-git": "^1.107.0"
