--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bl": "^2.1.2",
     "body-parser": "^1.18.3",
     "clear": "^0.1.0",
+    "dotenv": "^8.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "generate-password": "^1.4.1",
