--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "sanrakshak",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "author": "Ritik Srivastava",
-  "license": "ISC",
-  "dependencies": {
-    "aws-sdk": "^2.360.0",
-    "bl": "^2.1.2",
-    "body-parser": "^1.18.3",
-    "clear": "^0.1.0",
-    "dotenv": "^8.1.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "generate-password": "^1.4.1",
-    "mongoose": "^5.3.12",
-    "request": "^2.88.0",
-    "simple-git": "^1.107.0"
-  }
+	"name": "sanrakshak",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js > log.txt"
+	},
+	"author": "Ritik Srivastava",
+	"license": "ISC",
+	"dependencies": {
+		"aws-sdk": "^2.360.0",
+		"bl": "^2.1.2",
+		"body-parser": "^1.18.3",
+		"clear": "^0.1.0",
+		"dotenv": "^8.1.0",
+		"ejs": "^2.6.1",
+		"express": "^4.16.4",
+		"generate-password": "^1.4.1",
+		"mongoose": "^5.3.12",
+		"request": "^2.88.0",
+		"simple-git": "^1.107.0"
+	}
 }
